# RaFT-UAV

./: .gitignore  .jscpd.json  .mega-linter.yml  .tmp_entrypoint_check  .tmp_full_pyproject_check  CITATION.cff  README.md  pyproject.toml  pytest.ini  ruff.toml  scratch_test_connector_write.txt  tmp_pyproject_test.txt  tmp_test_marker.txt
.github/: debug_pr_1255.py  dependabot.yml  frame-gap-audit-pr.trigger  mmuad-train-zip-probe.pr-trigger  mmuad-train-zip-probe.trigger
.github/diagnostics/: pytest-first-failure.txt
.github/scripts/: aggregate_stateful_lofo.py  ensure-aadm2025dryad-webdav.sh  summarize_stateful_sweep_run.py
.github/workflows/: aerpaw-gating-ablation.yml  agent-bias-diagnostic.yml  agent-candidate-reservoir-debug.yml  agent-catprob-frame-grouping-patch.yml  agent-diagnose-pytest.yml  agent-fix-candidate-reservoir-oracle-sequence.yml  agent-fix-paper-selection-partial-index.yml  agent-lts-diagnostic.yml  agent-oracle-coverage-diagnostic.yml  apply-candidate-truth-text-fix.yml  apply-pr-1428-commit.yml  (+45 more)
config/: origins.example.toml
docs/: advanced_results_improvements.md  fifth_wave_reliability_improvements.md  heteroscedastic_uncertainty.md  leave_flight_out_sota.md  lofo_bias_time_offset_calibration.md  lofo_radar_covariance_tuning.md  lofo_time_offset_calibration.md  mmuad_adapter.md  mmuad_agreement_adaptive_pair_forward_backward.md  mmuad_anchor_conditioned_group_mass_topk.md  mmuad_branch_aware_candidate_uncertainty.md  mmuad_branch_consensus.md  mmuad_candidate_mixture_group_topk.md  mmuad_candidate_mixture_multistart.md  mmuad_candidate_mixture_sequence_multistart.md  mmuad_candidate_mixture_sequence_pool_selector.md  mmuad_candidate_oracle_attribution.md  mmuad_candidate_pair_forward_backward.md  mmuad_candidate_pair_forward_backward_agreement_adaptive.md  mmuad_candidate_pair_forward_backward_agreement_cv.md  mmuad_candidate_pair_group_correction.md  mmuad_candidate_sigma_calibration_train_cv.md  mmuad_candidate_temporal_support_quota.md  mmuad_class_conditioned_anchor_reliability.md  mmuad_class_probability_calibration.md  mmuad_confidence_adaptive_class_conditioning.md  mmuad_consensus_uncertainty.md  mmuad_constant_velocity_bridge_quota.md  mmuad_entropy_adaptive_pair_forward_backward.md  mmuad_forward_backward_prior.md  mmuad_grouped_candidate_mixture.md  mmuad_grouped_reservoir_mixture_map.md  mmuad_local_leaderboard.md  mmuad_multi_anchor_conditioned_group_mass_topk.md  mmuad_multi_anchor_group_coverage.md  mmuad_multi_anchor_group_selection.md  mmuad_pair_log_posterior_mixture.md  mmuad_posterior_mass_group_topk.md  mmuad_reliability_priority_anchor_coverage.md  mmuad_risk_aware_candidate_reservoir.md  (+27 more)
drafts/: raft_uav_plus_structured_draft.tex
experiments/: raft_uav_extended_candidates.json
notes/: class_domain_note.txt  official_note.txt
patches/: raft_uav_sigma_validation_fix.patch
scripts/: __init__.py  ablation_common.py  analyze_association_failures.py  augment_tracklet_viterbi_lofo_replay_summary.py  build_mmuad_local_leaderboard.py  build_mmuad_track5_scorecard.py  collect_gating_ablation.py  compare_tracking_methods.py  extract_mmuad_rosbag_topics.py  inspect_mmuad_layout.py  mine_bad_segments.py  mmuad_branch_reservoir_build.py  mmuad_branch_reservoir_export.py  mmuad_branch_reservoir_oracle_recall.py  mmuad_branch_reservoir_timebin_sweep.py  mmuad_build_branch_reservoir.py  mmuad_calibrate_class_probabilities.py  mmuad_candidate_branch_uncertainty.py  mmuad_candidate_consensus_quota.py  mmuad_candidate_mixture_group_anchor_mass_topk.py  mmuad_candidate_mixture_group_class_conditioned_anchor_quantile.py  mmuad_candidate_mixture_group_confidence_adaptive_class_anchor_quantile.py  mmuad_candidate_mixture_group_mass_topk.py  mmuad_candidate_mixture_group_multi_anchor_coverage.py  mmuad_candidate_mixture_group_multi_anchor_mass_topk.py  mmuad_candidate_mixture_group_spatial_mass_topk.py  mmuad_candidate_mixture_group_spatial_topk.py  mmuad_candidate_mixture_group_topk.py  mmuad_candidate_mixture_group_weighted_anchor_coverage.py  mmuad_candidate_mixture_group_weighted_anchor_quantile.py  mmuad_candidate_mixture_group_weighted_multi_anchor_mass_topk.py  mmuad_candidate_mixture_multistart.py  mmuad_candidate_mixture_sequence_multistart.py  mmuad_candidate_mixture_sequence_pool_selector.py  mmuad_candidate_pair_forward_backward.py  mmuad_candidate_pair_forward_backward_adaptive.py  mmuad_candidate_pair_forward_backward_agreement.py  mmuad_candidate_pair_forward_backward_agreement_adaptive.py  mmuad_candidate_pair_forward_backward_agreement_cv.py  mmuad_candidate_pair_group_correction.py  (+70 more)
tests/: _tmp_temporal_consensus_cli_probe.py  conftest.py  placeholder_sequence_text.txt  test_ablation_common.py  test_adaptive_process_noise_config_validation.py  test_additional_improvement_scaffolding.py  test_aerpaw_catprob_numeric_ranking.py  test_aerpaw_jsonl_frame_index.py  test_aerpaw_jsonl_non_object_frames.py  test_aerpaw_latitude_filtering.py  test_aerpaw_loader.py  test_aerpaw_nested_track_data_fallback.py  test_aerpaw_radar_jsonl_blank_lines.py  test_aerpaw_rf_csv_header_collisions.py  test_aerpaw_rf_default_std_validation.py  test_aerpaw_rf_measurement_fallback.py  test_aerpaw_root_discovery.py  test_aerpaw_truth_numeric_coercion.py  test_best_non_oracle_cli.py  test_best_non_oracle_nonfinite_options.py  test_bias_correct_frame_keep_uncorrected.py  test_bias_correction.py  test_bias_model_cli_environment.py  test_bias_runtime.py  test_bias_sequence_alignment.py  test_bias_serialized_truth_time_sort.py  test_calibration_bundle.py  test_calibration_bundle_boolean_offsets.py  test_candidate_pair_forward_backward_config_validation.py  test_candidate_pool_compare_cli.py  test_candidate_pool_compare_direct_cli.py  test_catprob_none_filter.py  test_catprob_selection.py  test_cli_clock_offsets.py  test_cli_map_smoother_measurements.py  test_cli_radar_selection.py  test_cli_radar_selection_modes.py  test_cli_robust_update_modes.py  test_cli_smoothing_measurements.py  test_cli_time_offsets.py  (+881 more)
tools/: find_radar_origin_candidates.py
(+569 files in other folders)
