[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raft-uav"
version = "0.1.0"
description = "Radar-RF Fusion Tracking for UAVs"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Florian Pfaff" }]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "PyYAML>=6.0.1",
    "pyrecest @ git+https://github.com/FlorianPfaff/PyRecEst.git@main",
    "scikit-learn>=1.4",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
pointcloud = [
    "laspy[lazrs]>=2.5",
]

[project.scripts]
raft-uav = "raft_uav.tracklet_viterbi_cli:main"
raft-uav-legacy = "raft_uav.robust_cli:main"
raft-uav-heteroscedastic = "raft_uav.heteroscedastic_cli:main"
raft-uav-heteroscedastic-tracklet-viterbi = "raft_uav.heteroscedastic_tracklet_viterbi_cli:main"
raft-uav-imm = "raft_uav.imm_cli:main"
raft-uav-best-non-oracle = "raft_uav.best_non_oracle_cli:main"
raft-uav-train-radar-association = "raft_uav.train_radar_association_cli:main"
raft-uav-run-learned-radar-association = "raft_uav.run_learned_radar_association_cli:main"
raft-uav-train-bias-model = "raft_uav.bias_cli:main"
raft-uav-with-bias = "raft_uav.bias_model_cli:main"
raft-uav-tracklet-viterbi = "raft_uav.tracklet_viterbi_cli:main"
raft-uav-tracklet-viterbi-fixed-lag = "raft_uav.tracklet_viterbi_fixed_lag_safe_cli:main"
raft-uav-tracklet-viterbi-range = "raft_uav.tracklet_viterbi_range_cli:main"
raft-uav-lofo-time-offset = "raft_uav.lofo_time_offset_cli:main"
raft-uav-diagnose-time-offset = "raft_uav.diagnostics.time_offset:main"
raft-uav-lofo-bias-time-offset = "raft_uav.calibration.lofo_cli:main"
raft-uav-calibrate-nis-covariance = "raft_uav.calibration.nis_covariance_cli:main"
raft-uav-paper-fingerprint = "raft_uav.diagnostics.paper_fingerprint:main"
raft-uav-diagnose-paper-table = "raft_uav.diagnostics.paper_table:main"
raft-uav-paper-strict = "raft_uav.diagnostics.paper_strict:main"
raft-uav-radar-geometry-audit = "raft_uav.diagnostics.radar_geometry:main"
raft-uav-radar-candidate-audit = "raft_uav.diagnostics.radar_candidate_audit:main"
raft-uav-nis-reliability = "raft_uav.diagnostics.nis_reliability:main"
raft-uav-paper-first-mismatch = "raft_uav.diagnostics.paper_first_mismatch:main"
raft-uav-tracklet-feature-store = "raft_uav.diagnostics.tracklet_feature_store:main"
raft-uav-nested-lofo-tuning = "raft_uav.experiments.nested_lofo_tuning:main"
raft-uav-method-registry = "raft_uav.experiments.method_registry:main"
raft-uav-sweep-tracklet-viterbi = "raft_uav.sweep_tracklet_viterbi_cli:main"
raft-uav-oracle-coverage = "raft_uav.oracle_coverage_cli:main"
raft-uav-result-improvement-suite = "raft_uav.research.result_improvement_suite:main"
raft-uav-comprehensive-result-report = "raft_uav.research.comprehensive_result_report_cli:main"
raft-uav-radar-segment-fingerprint = "raft_uav.diagnostics.radar_fingerprint:main"
raft-uav-paper-offset-sweep = "raft_uav.diagnostics.paper_offset_sweep:main"
raft-uav-paper-parity-grid = "raft_uav.diagnostics.paper_parity_grid:main"
raft-uav-paper-parity-gate = "raft_uav.diagnostics.paper_parity_gate:main"
raft-uav-topk-weakz-tracklet = "raft_uav.topk_weakz_tracklet_cli:main"
raft-uav-mmuad-track = "raft_uav.mmuad.cli:main"
raft-uav-mmuad-run = "raft_uav.mmuad.run:main"
raft-uav-mmuad-track5-scorecard = "raft_uav.mmuad.track5_scorecard_cli:main"
raft-uav-mmuad-template-resample = "raft_uav.mmuad.track5_template_resample_cli:main"
raft-uav-mmuad-ensemble-track5-submissions = "raft_uav.mmuad.track5_submission_ensemble:main"
raft-uav-mmuad-track5-submission-ensemble-grid = "raft_uav.mmuad.track5_submission_ensemble_grid:main"
raft-uav-mmuad-track5-estimate-ensemble = "raft_uav.mmuad.track5_estimate_ensemble:main"
raft-uav-mmuad-track5-estimate-calibration = "raft_uav.mmuad.track5_estimate_calibration:main"
raft-uav-mmuad-track5-calibration-shrinkage = "raft_uav.mmuad.track5_estimate_calibration_shrinkage:main"
raft-uav-mmuad-track5-estimate-ensemble-grid = "raft_uav.mmuad.track5_estimate_ensemble_grid:main"
raft-uav-mmuad-track5-ensemble-grid-config = "raft_uav.mmuad.track5_estimate_ensemble_grid_config:main"
raft-uav-mmuad-track5-ensemble-weight-search = "raft_uav.mmuad.track5_estimate_ensemble_weight_search:main"
raft-uav-mmuad-track5-estimate-ensemble-weight-search = "raft_uav.mmuad.track5_estimate_ensemble_weight_search:main"
raft-uav-mmuad-track5-estimate-ensemble-loso = "raft_uav.mmuad.track5_estimate_ensemble_loso_weight_search:main"
raft-uav-mmuad-track5-class-ensemble = "raft_uav.mmuad.track5_class_conditioned_ensemble:main"
raft-uav-mmuad-track5-soft-class-ensemble = "raft_uav.mmuad.track5_soft_class_ensemble:main"
raft-uav-mmuad-track5-uncertainty-ensemble = "raft_uav.mmuad.track5_uncertainty_ensemble:main"
raft-uav-mmuad-track5-uncertainty-column-adapter = "raft_uav.mmuad.track5_uncertainty_column_adapter:main"
raft-uav-mmuad-track5-uncertainty-ensemble-weight-search = "raft_uav.mmuad.track5_uncertainty_ensemble_weight_search:main"
raft-uav-mmuad-track5-apply-ensemble-weights = "raft_uav.mmuad.track5_estimate_ensemble_apply_weights:main"
raft-uav-mmuad-track5-spread-guard-ensemble = "raft_uav.mmuad.track5_estimate_ensemble_spread_guard:main"
raft-uav-mmuad-track5-spread-guard-search = "raft_uav.mmuad.track5_spread_guard_search:main"
raft-uav-mmuad-track5-classification-relabel = "raft_uav.mmuad.track5_classification_relabel:main"
raft-uav-mmuad-track5-sequence-gate = "raft_uav.mmuad.track5_sequence_gate:main"
raft-uav-mmuad-track5-estimate-sequence-gate = "raft_uav.mmuad.track5_estimate_sequence_gate:main"
raft-uav-mmuad-track5-estimate-sequence-gate-fit = "raft_uav.mmuad.track5_estimate_sequence_gate_fit:main"
raft-uav-mmuad-track5-sequence-gate-fit = "raft_uav.mmuad.track5_sequence_gate_fit_text_cli:main"
raft-uav-mmuad-track5-sequence-gate-train-apply = "raft_uav.mmuad.track5_sequence_gate_train_apply:main"
raft-uav-mmuad-track5-temporal-repair = "raft_uav.mmuad.track5_temporal_repair:main"
raft-uav-mmuad-track5-temporal-repair-search = "raft_uav.mmuad.track5_temporal_repair_search:main"
raft-uav-mmuad-track5-trajectory-smooth = "raft_uav.mmuad.track5_trajectory_smooth:main"
raft-uav-mmuad-classification-audit = "raft_uav.mmuad.classification_audit:main"
raft-uav-mmuad-sequence-classifier = "raft_uav.mmuad.classification_cli:main"
raft-uav-mmuad-sequence-classifier-fusion = "raft_uav.mmuad.sequence_classifier_fusion:main"
raft-uav-mmuad-train-sequence-classifier = "raft_uav.mmuad.train_sequence_classifier:main"
raft-uav-mmuad-cluster-ranker = "raft_uav.mmuad.cluster_ranker:main"
raft-uav-mmuad-coordinate-audit = "raft_uav.mmuad.coordinate_alignment_audit:main"
raft-uav-mmuad-sequence-alignment-audit = "raft_uav.mmuad.sequence_alignment_audit:main"
raft-uav-mmuad-radar-extraction-audit = "raft_uav.mmuad.radar_extraction_audit:main"
raft-uav-mmuad-candidate-oracle-gap = "raft_uav.mmuad.candidate_oracle_gap:main"
raft-uav-mmuad-candidate-reservoir = "raft_uav.mmuad.candidate_reservoir:main"
raft-uav-mmuad-candidate-oracle-attribution = "raft_uav.mmuad.candidate_oracle_attribution:main"
raft-uav-mmuad-candidate-oracle-blocks = "raft_uav.mmuad.candidate_oracle_blocks:main"
raft-uav-mmuad-candidate-mixture-map = "raft_uav.mmuad.candidate_mixture_map:main"
raft-uav-mmuad-candidate-assignment-diagnostics = "raft_uav.mmuad.candidate_assignment_diagnostics:main"
raft-uav-mmuad-candidate-assignment-blocks = "raft_uav.mmuad.candidate_assignment_blocks:main"
raft-uav-mmuad-candidate-assignment-branch-summary = "raft_uav.mmuad.candidate_assignment_branch_summary:main"
raft-uav-mmuad-candidate-assignment-report = "raft_uav.mmuad.candidate_assignment_report:main"
raft-uav-mmuad-reservoir-mixture-map = "raft_uav.mmuad.candidate_reservoir_mixture_map:main"
raft-uav-mmuad-track5-leaderboard-pipeline = "raft_uav.mmuad.track5_leaderboard_pipeline:main"
raft-uav-mmuad-grouped-candidate-mixture-map = "raft_uav.mmuad.candidate_mixture_map_grouped:main"
raft-uav-mmuad-diversity-cap-reservoir = "raft_uav.mmuad.candidate_reservoir_diversity:main"
raft-uav-mmuad-spatial-diversity-reservoir = "raft_uav.mmuad.candidate_reservoir_spatial:main"
raft-uav-mmuad-candidate-reservoir-grid = "raft_uav.mmuad.candidate_reservoir_grid:main"
raft-uav-mmuad-candidate-reservoir-train-cv = "raft_uav.mmuad.candidate_reservoir_train_cv:main"
raft-uav-mmuad-apply-candidate-reservoir-config = "raft_uav.mmuad.candidate_reservoir_apply:main"
raft-uav-mmuad-candidate-pool-compare = "raft_uav.mmuad.candidate_pool_compare_cli:main"
raft-uav-mmuad-candidate-pull = "raft_uav.mmuad.candidate_pull:main"
raft-uav-mmuad-stratified-candidate-mixture-map = "raft_uav.mmuad.candidate_mixture_map_stratified:main"
raft-uav-mmuad-stratified-mixture-submission = "raft_uav.mmuad.stratified_mixture_submission:main"
raft-uav-mmuad-image-evidence = "raft_uav.mmuad.image_evidence:main"
raft-uav-mmuad-class-prob-context = "raft_uav.mmuad.class_probability_context:main"
raft-uav-mmuad-class-conditioned-ranker = "raft_uav.mmuad.class_conditioned_ranker:main"
raft-uav-mmuad-fit-candidate-score-calibration = "raft_uav.mmuad.candidate_score_calibration:fit_main"
raft-uav-mmuad-apply-candidate-score-calibration = "raft_uav.mmuad.candidate_score_calibration:apply_main"
raft-uav-mmuad-candidate-branch-context = "raft_uav.mmuad.candidate_branch_context:main"
raft-uav-mmuad-candidate-branch-consensus = "raft_uav.mmuad.candidate_branch_consensus:main"
raft-uav-mmuad-consensus-uncertainty = "raft_uav.mmuad.candidate_consensus_uncertainty:main"
raft-uav-mmuad-temporal-consensus = "raft_uav.mmuad.candidate_temporal_consensus:main"
raft-uav-mmuad-forward-backward-prior = "raft_uav.mmuad.candidate_forward_backward:main"
raft-uav-mmuad-temporal-consensus-train-cv = "raft_uav.mmuad.candidate_temporal_consensus_train_cv_cli:main"
raft-uav-mmuad-apply-temporal-consensus-config = "raft_uav.mmuad.candidate_temporal_consensus_train_cv:apply_main"
raft-uav-mmuad-temporal-consensus-assigned = "raft_uav.mmuad.candidate_temporal_consensus_assignment:main"
raft-uav-mmuad-fit-candidate-sigma-calibration = "raft_uav.mmuad.candidate_uncertainty_calibration:fit_main"
raft-uav-mmuad-apply-candidate-sigma-calibration = "raft_uav.mmuad.candidate_uncertainty_calibration:apply_main"
raft-uav-mmuad-candidate-sigma-calibration-train-cv = "raft_uav.mmuad.candidate_uncertainty_calibration_train_cv:main"
raft-uav-mmuad-fit-source-calibration = "raft_uav.mmuad.source_calibration:fit_main"
raft-uav-mmuad-apply-source-calibration = "raft_uav.mmuad.source_calibration:apply_main"
raft-uav-mmuad-source-calibration-branches = "raft_uav.mmuad.source_calibration_branches:main"
raft-uav-mmuad-select-train-config = "raft_uav.mmuad.train_selected_config:main"
raft-uav-multi-uav-lts = "raft_uav.multi_uav_lts.cli:main"
raft-uav-multi-uav-lts-coverage-audit = "raft_uav.multi_uav_lts.coverage_audit:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--basetemp=.pytest-tmp"
markers = [
    "integration: tests that require the external AERPAW/Dryad dataset",
]
