[project]
name = "raft-uav"
version = "0.1.0"
description = "Radar-RF fusion baselines for UAV tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "pyproj>=3.6",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "opencv-python>=4.8",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
raft-uav = "raft_uav.tracklet_viterbi_cli:main"
raft-uav-base = "raft_uav.cli:main"
raft-uav-inspect = "raft_uav.inspect_cli:main"
raft-uav-imm = "raft_uav.imm_cli:main"
raft-uav-train-calibration = "raft_uav.calibration_cli:main"
raft-uav-lofo-time-offset = "raft_uav.diagnostics.lofo_time_offset:main"
raft-uav-paper-strict = "raft_uav.diagnostics.paper_strict:main"
raft-uav-paper-artifact-audit = "raft_uav.diagnostics.paper_artifact_audit:main"
raft-uav-paper-first-mismatch = "raft_uav.diagnostics.paper_first_mismatch:main"
raft-uav-tracklet-feature-store = "raft_uav.diagnostics.tracklet_feature_store:main"
raft-uav-nested-lofo-tuning = "raft_uav.experiments.nested_lofo_tuning:main"
raft-uav-method-registry = "raft_uav.experiments.method_registry:main"
raft-uav-sweep-tracklet-viterbi = "raft_uav.sweep_tracklet_viterbi_cli:main"
raft-uav-oracle-coverage = "raft_uav.oracle_coverage_cli:main"
raft-uav-result-improvement-suite = "raft_uav.research.result_improvement_suite:main"
raft-uav-comprehensive-result-report = "raft_uav.research.comprehensive_result_report_cli:main"
raft-uav-radar-segment-fingerprint = "raft_uav.diagnostics.radar_fingerprint:main"
raft-uav-paper-offset-sweep = "raft_uav.diagnostics.paper_offset_sweep:main"
raft-uav-paper-parity-grid = "raft_uav.diagnostics.paper_parity_grid:main"
raft-uav-paper-parity-gate = "raft_uav.diagnostics.paper_parity_gate:main"
raft-uav-topk-weakz-tracklet = "raft_uav.topk_weakz_tracklet_cli:main"
raft-uav-mmuad-track = "raft_uav.mmuad.cli:main"
raft-uav-mmuad-run = "raft_uav.mmuad.run:main"
raft-uav-mmuad-track5-scorecard = "raft_uav.mmuad.track5_scorecard_cli:main"
raft-uav-mmuad-candidate-reservoir = "raft_uav.mmuad.candidate_reservoir:main"
raft-uav-mmuad-candidate-reservoir-grid = "raft_uav.mmuad.candidate_reservoir_grid:main"
raft-uav-mmuad-candidate-mixture-map = "raft_uav.mmuad.candidate_mixture_map:main"
raft-uav-mmuad-reservoir-mixture-map = "raft_uav.mmuad.candidate_reservoir_mixture_map:main"
raft-uav-mmuad-candidate-assignment-diagnostics = "raft_uav.mmuad.candidate_assignment_diagnostics:main"
raft-uav-mmuad-candidate-assignment-blocks = "raft_uav.mmuad.candidate_assignment_blocks:main"
raft-uav-mmuad-candidate-assignment-action-plan = "raft_uav.mmuad.candidate_assignment_action_plan:main"
raft-uav-mmuad-candidate-assignment-branch-summary = "raft_uav.mmuad.candidate_assignment_branch_summary:main"
raft-uav-mmuad-candidate-assignment-report = "raft_uav.mmuad.candidate_assignment_report:main"
raft-uav-mmuad-template-resample = "raft_uav.mmuad.track5_template_resample_cli:main"
raft-uav-mmuad-ensemble-track5-submissions = "raft_uav.mmuad.track5_submission_ensemble:main"
raft-uav-mmuad-track5-submission-ensemble-grid = "raft_uav.mmuad.track5_submission_ensemble_grid:main"
raft-uav-mmuad-track5-estimate-ensemble = "raft_uav.mmuad.track5_estimate_ensemble:main"
raft-uav-mmuad-track5-estimate-calibration = "raft_uav.mmuad.track5_estimate_calibration:main"
raft-uav-mmuad-track5-calibration-shrinkage = "raft_uav.mmuad.track5_estimate_calibration_shrinkage:main"
raft-uav-mmuad-track5-estimate-ensemble-grid = "raft_uav.mmuad.track5_estimate_ensemble_grid:main"
raft-uav-mmuad-track5-ensemble-grid-config = "raft_uav.mmuad.track5_estimate_ensemble_grid_config:main"
raft-uav-mmuad-track5-ensemble-weight-search = "raft_uav.mmuad.track5_estimate_ensemble_weight_search:main"
raft-uav-mmuad-track5-estimate-ensemble-weight-search = "raft_uav.mmuad.track5_estimate_ensemble_weight_search:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--basetemp=.pytest-tmp"
markers = [
  "integration: tests that require the external AERPAW/Dryad dataset",
]
