[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raft-uav"
version = "0.1.0"
description = "Radar-RF Fusion Tracking for UAVs"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Florian Pfaff" }]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "PyYAML>=6.0.1",
    "pyrecest @ git+https://github.com/FlorianPfaff/PyRecEst.git@main",
    "scikit-learn>=1.4",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
pointcloud = [
    "laspy[lazrs]>=2.5",
]

[project.scripts]
raft-uav = "raft_uav.tracklet_viterbi_cli:main"
raft-uav-legacy = "raft_uav.robust_cli:main"
raft-uav-heteroscedastic = "raft_uav.heteroscedastic_cli:main"
raft-uav-heteroscedastic-tracklet-viterbi = "raft_uav.heteroscedastic_tracklet_viterbi_cli:main"
raft-uav-imm = "raft_uav.imm_cli:main"
raft-uav-best-non-oracle = "raft_uav.best_non_oracle_cli:main"
raft-uav-train-radar-association = "raft_uav.train_radar_association_cli:main"
raft-uav-run-learned-radar-association = "raft_uav.run_learned_radar_association_cli:main"
raft-uav-train-bias-model = "raft_uav.bias_cli:main"
raft-uav-with-bias = "raft_uav.bias_model_cli:main"
raft-uav-tracklet-viterbi = "raft_uav.tracklet_viterbi_cli:main"
raft-uav-tracklet-viterbi-fixed-lag = "raft_uav.tracklet_viterbi_fixed_lag_safe_cli:main"
raft-uav-tracklet-viterbi-range = "raft_uav.tracklet_viterbi_range_cli:main"
raft-uav-lofo-time-offset = "raft_uav.lofo_time_offset_cli:main"
raft-uav-diagnose-time-offset = "raft_uav.diagnostics.time_offset:main"
raft-uav-lofo-bias-time-offset = "raft_uav.calibration.lofo_cli:main"
raft-uav-calibrate-nis-covariance = "raft_uav.calibration.nis_covariance_cli:main"
raft-uav-paper-fingerprint = "raft_uav.diagnostics.paper_fingerprint:main"
raft-uav-diagnose-paper-table = "raft_uav.diagnostics.paper_table:main"
raft-uav-paper-strict = "raft_uav.diagnostics.paper_strict:main"
raft-uav-radar-geometry-audit = "raft_uav.diagnostics.radar_geometry:main"
raft-uav-radar-candidate-audit = "raft_uav.diagnostics.radar_candidate_audit:main"
raft-uav-nis-reliability = "raft_uav.diagnostics.nis_reliability:main"
raft-uav-paper-first-mismatch = "raft_uav.diagnostics.paper_first_mismatch:main"
raft-uav-tracklet-feature-store = "raft_uav.diagnostics.tracklet_feature_store:main"
raft-uav-nested-lofo-tuning = "raft_uav.experiments.nested_lofo_tuning:main"
raft-uav-method-registry = "raft_uav.experiments.method_registry:main"
raft-uav-sweep-tracklet-viterbi = "raft_uav.sweep_tracklet_viterbi_cli:main"
raft-uav-oracle-coverage = "raft_uav.oracle_coverage_cli:main"
raft-uav-result-improvement-suite = "raft_uav.research.result_improvement_suite:main"
raft-uav-comprehensive-result-report = "raft_uav.research.comprehensive_result_report_cli:main"
raft-uav-radar-segment-fingerprint = "raft_uav.diagnostics.radar_fingerprint:main"
raft-uav-paper-offset-sweep = "raft_uav.diagnostics.paper_offset_sweep:main"
raft-uav-paper-parity-grid = "raft_uav.diagnostics.paper_parity_grid:main"
raft-uav-paper-parity-gate = "raft_uav.diagnostics.paper_parity_gate:main"
raft-uav-topk-weakz-tracklet = "raft_uav.topk_weakz_tracklet_cli:main"
raft-uav-mmuad-track = "raft_uav.mmuad.cli:main"
raft-uav-mmuad-run = "raft_uav.mmuad.run:main"
raft-uav-mmuad-track5-scorecard = "raft_uav.mmuad.track5_scorecard_cli:main"
raft-uav-mmuad-candidate-reservoir = "raft_uav.mmuad.candidate_reservoir:main"
raft-uav-mmuad-candidate-reservoir-grid = "raft_uav.mmuad.candidate_reservoir_grid:main"
raft-uav-mmuad-candidate-pool-compare = "raft_uav.mmuad.candidate_pool_compare_cli:main"
raft-uav-mmuad-candidate-mixture-map = "raft_uav.mmuad.candidate_mixture_map:main"
raft-uav-mmuad-reservoir-mixture-map = "raft_uav.mmuad.candidate_reservoir_mixture_map:main"
raft-uav-mmuad-reservoir-mixture-gap-frames = "raft_uav.mmuad.candidate_reservoir_mixture_gap_frames:main"
raft-uav-mmuad-reservoir-mixture-report = "raft_uav.mmuad.candidate_reservoir_mixture_report:main"
raft-uav-mmuad-reservoir-bottleneck-audit = "raft_uav.mmuad.candidate_reservoir_bottleneck:main"
raft-uav-mmuad-candidate-branch-consensus = "raft_uav.mmuad.candidate_branch_consensus:main"
raft-uav-mmuad-consensus-uncertainty = "raft_uav.mmuad.candidate_consensus_uncertainty:main"
raft-uav-mmuad-candidate-assignment-diagnostics = "raft_uav.mmuad.candidate_assignment_diagnostics:main"
raft-uav-mmuad-candidate-assignment-blocks = "raft_uav.mmuad.candidate_assignment_blocks:main"
raft-uav-mmuad-candidate-assignment-action-plan = "raft_uav.mmuad.candidate_assignment_action_plan:main"
raft-uav-mmuad-candidate-assignment-branch-summary = "raft_uav.mmuad.candidate_assignment_branch_summary:main"
raft-uav-mmuad-candidate-assignment-report = "raft_uav.mmuad.candidate_assignment_report:main"
raft-uav-mmuad-candidate-oracle-targets = "raft_uav.mmuad.candidate_oracle_targets:main"
raft-uav-mmuad-fit-candidate-score-calibration = "raft_uav.mmuad.candidate_score_calibration:fit_main"
raft-uav-mmuad-apply-candidate-score-calibration = "raft_uav.mmuad.candidate_score_calibration:apply_main"
raft-uav-mmuad-template-resample = "raft_uav.mmuad.track5_template_resample_cli:main"
raft-uav-mmuad-track5-speed-limit = "raft_uav.mmuad.track5_speed_limit:main"
raft-uav-mmuad-track5-acceleration-limit = "raft_uav.mmuad.track5_acceleration_limit:main"
raft-uav-mmuad-stratified-mixture-submission = "raft_uav.mmuad.stratified_mixture_submission:main"
raft-uav-mmuad-ensemble-track5-submissions = "raft_uav.mmuad.track5_submission_ensemble:main"
raft-uav-mmuad-track5-submission-ensemble-grid = "raft_uav.mmuad.track5_submission_ensemble_grid:main"
raft-uav-mmuad-track5-estimate-ensemble = "raft_uav.mmuad.track5_estimate_ensemble_text_cli:main"
raft-uav-mmuad-track5-consensus-ensemble = "raft_uav.mmuad.track5_estimate_consensus_ensemble:main"
raft-uav-mmuad-track5-consensus-ensemble-grid = "raft_uav.mmuad.track5_consensus_ensemble_grid:main"
raft-uav-mmuad-track5-estimate-calibration = "raft_uav.mmuad.track5_estimate_calibration:main"
raft-uav-mmuad-track5-calibration-shrinkage = "raft_uav.mmuad.track5_estimate_calibration_shrinkage:main"
raft-uav-mmuad-track5-estimate-ensemble-grid = "raft_uav.mmuad.track5_estimate_ensemble_grid:main"
raft-uav-mmuad-track5-ensemble-grid-config = "raft_uav.mmuad.track5_estimate_ensemble_grid_config:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--basetemp=.pytest-tmp"
markers = [
    "integration: tests that require the external AERPAW/Dryad dataset",
]
